--- a/renovate.json
+++ b/renovate.json
@@ -1,6 +1,116 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "extends": [
-    "config:recommended"
+  "extends": ["config:recommended"],
+  "customManagers": [
+    {
+      "customType": "regex",
+      "description": "Update OpenCloud Docker image in Ansible vars",
+      "fileMatch": [
+        "(^|/)defaults/main\\.ya?ml$",
+        "(^|/)group_vars/.+\\.ya?ml$",
+        "(^|/)host_vars/.+\\.ya?ml$",
+        "(^|/)vars/.+\\.ya?ml$"
+      ],
+      "matchStrings": [
+        "opencloud_version:\\s*\"(?<currentValue>[^\"]+)\""
+      ],
+      "datasourceTemplate": "docker",
+      "depNameTemplate": "opencloud",
+      "versioningTemplate": "docker"
+    },
+    {
+      "customType": "regex",
+      "description": "Update Mosquitto Docker image in Ansible vars",
+      "fileMatch": [
+        "(^|/)defaults/main\\.ya?ml$",
+        "(^|/)group_vars/.+\\.ya?ml$",
+        "(^|/)host_vars/.+\\.ya?ml$",
+        "(^|/)vars/.+\\.ya?ml$"
+      ],
+      "matchStrings": [
+        "mosquitto_version:\\s*\"(?<currentValue>[^\"]+)\""
+      ],
+      "datasourceTemplate": "docker",
+      "depNameTemplate": "eclipse-mosquitto",
+      "versioningTemplate": "docker"
+    },
+    {
+      "customType": "regex",
+      "description": "Update Home Assistant Docker image in Ansible vars",
+      "fileMatch": [
+        "(^|/)defaults/main\\.ya?ml$",
+        "(^|/)group_vars/.+\\.ya?ml$",
+        "(^|/)host_vars/.+\\.ya?ml$",
+        "(^|/)vars/.+\\.ya?ml$"
+      ],
+      "matchStrings": [
+        "homeassistant_version:\\s*\"(?<currentValue>[^\"]+)\""
+      ],
+      "datasourceTemplate": "docker",
+      "depNameTemplate": "homeassistant/home-assistant",
+      "versioningTemplate": "docker"
+    },
+    {
+      "customType": "regex",
+      "description": "Update Valkey Docker image in Ansible vars",
+      "fileMatch": [
+        "(^|/)defaults/main\\.ya?ml$",
+        "(^|/)group_vars/.+\\.ya?ml$",
+        "(^|/)host_vars/.+\\.ya?ml$",
+        "(^|/)vars/.+\\.ya?ml$"
+      ],
+      "matchStrings": [
+        "valkey_version:\\s*\"(?<currentValue>[^\"]+)\""
+      ],
+      "datasourceTemplate": "docker",
+      "depNameTemplate": "valkey/valkey",
+      "versioningTemplate": "docker"
+    },
+    {
+      "customType": "regex",
+      "description": "Update PostgreSQL Docker image in Ansible vars",
+      "fileMatch": [
+        "(^|/)defaults/main\\.ya?ml$",
+        "(^|/)group_vars/.+\\.ya?ml$",
+        "(^|/)host_vars/.+\\.ya?ml$",
+        "(^|/)vars/.+\\.ya?ml$"
+      ],
+      "matchStrings": [
+        "postgresql_version:\\s*\"(?<currentValue>[^\"]+)\""
+      ],
+      "datasourceTemplate": "docker",
+      "depNameTemplate": "postgres",
+      "versioningTemplate": "docker"
+    },
+    {
+      "customType": "regex",
+      "description": "Update Authentik Docker image in Ansible vars",
+      "fileMatch": [
+        "(^|/)defaults/main\\.ya?ml$",
+        "(^|/)group_vars/.+\\.ya?ml$",
+        "(^|/)host_vars/.+\\.ya?ml$",
+        "(^|/)vars/.+\\.ya?ml$"
+      ],
+      "matchStrings": [
+        "authentik_version:\\s*\"(?<currentValue>[^\"]+)\""
+      ],
+      "datasourceTemplate": "docker",
+      "depNameTemplate": "goauthentik/server",
+      "versioningTemplate": "docker"
+    }
+  ],
+  "packageRules": [
+    {
+      "description": "Group all Ansible Docker version updates",
+      "matchManagers": ["regex"],
+      "groupName": "Ansible Docker Versions",
+      "commitMessageTopic": "Docker versions in Ansible vars"
+    },
+    {
+      "description": "Enable digest pinning for some images",
+      "matchDatasources": ["docker"],
+      "matchPackageNames": ["postgres", "valkey/valkey"],
+      "pinDigests": true
+    }
   ]
 }
