ansible, tofu: add bumper (vacuum cleaner)

--- a/ansible-playbook/inventories/backup/hosts/hosts.yml
+++ b/ansible-playbook/inventories/backup/hosts/hosts.yml
@@ -23,3 +23,6 @@ server:
         opencloud.nixpi.de:
           ansible_host: 192.168.60.14
           ansible_user: serveradmin
+        bumper.nixpi.de:
+          ansible_host: 192.168.60.15
+          ansible_user: serveradmin
