--- a/ansible-playbook/inventories/container/playbook.yml
+++ b/ansible-playbook/inventories/container/playbook.yml
@@ -41,3 +41,9 @@
   roles:
     - role: giftpilz0.homelab.traefik
     - role: giftpilz0.homelab.vaultwarden
+
+- name: Configure hosts - bumper
+  hosts: bumper
+  roles:
+    - role: giftpilz0.homelab.traefik
+    - role: giftpilz0.homelab.bumper
