--- a/ansible-playbook/inventories/container/hosts/hosts.yml
+++ b/ansible-playbook/inventories/container/hosts/hosts.yml
@@ -21,6 +21,10 @@ server:
       hosts:
         opencloud.nixpi.de:
           ansible_host: 192.168.60.14
+    bumper:
+      hosts:
+        bumper.nixpi.de:
+          ansible_host: 192.168.60.15
   vars:
     ansible_port: 22
     ansible_user: serveradmin
