--- a/ansible-playbook/inventories/container/host_vars/forgejo.nixpi.de/vars.yml
+++ b/ansible-playbook/inventories/container/host_vars/forgejo.nixpi.de/vars.yml
@@ -30,6 +30,17 @@ firewalld_rules_services:
 
 podman_user: "container"
 
+postgresql_version: "18-alpine"
+forgejo_version: "13"
+
+forgejo_postgresql_autoupdate: true
+forgejo_autoupdate: true
+
+forgejo_domain: "forgejo.nixpi.de"
+forgejo_oauth_client_id: "forgejo"
+forgejo_oauth_domain: "opencloud.nixpi.de"
+forgejo_oauth_name: "opencloud"
+
 ######################################
 ### giftpilz0.homelab.traefik
 
