--- a/ansible-playbook/inventories/container/host_vars/opencloud.nixpi.de/vars.yml
+++ b/ansible-playbook/inventories/container/host_vars/opencloud.nixpi.de/vars.yml
@@ -24,6 +24,12 @@ firewalld_rules_services:
   - service: https
     zone: clients
     state: enabled
+  - service: http
+    zone: server
+    state: enabled
+  - service: https
+    zone: server
+    state: enabled
 
 ######################################
 ### giftpilz0.server.podman, giftpilz0.homelab.opencloud
@@ -36,6 +42,18 @@ opencloud_autoupdate: true
 
 opencloud_domain: "https://opencloud.nixpi.de"
 opencloud_log_level: "WARN"
+
+opencloud_custom_clients:
+  - id: forgejo
+    name: "forgejo"
+    trusted: false
+    secret: "{{ forgejo_oauth_client_secret }}"
+    redirect_uris:
+      - "https://forgejo.nixpi.de/user/oauth2/opencloud/callback"
+    post_logout_redirect_uris: []
+    origins:
+      - "https://forgejo.nixpi.de"
+    application_type: "web"
 
 ######################################
 ### giftpilz0.homelab.traefik
