--- a/ansible-playbook/inventories/backup/hosts/hosts.yml
+++ b/ansible-playbook/inventories/backup/hosts/hosts.yml
@@ -8,11 +8,14 @@ server:
           ansible_user: root
     restic_clients:
       hosts:
+        homeassistant.nixpi.de:
+          ansible_host: 192.168.60.10
+          ansible_user: serveradmin
         vaultwarden.nixpi.de:
           ansible_host: 192.168.60.11
           ansible_user: serveradmin
-        homeassistant.nixpi.de:
-          ansible_host: 192.168.60.10
+        misc.nixpi.de:
+          ansible_host: 192.168.60.12
           ansible_user: serveradmin
         forgejo.nixpi.de:
           ansible_host: 192.168.60.13
