--- a/ansible-playbook/inventories/container/hosts/hosts.yml
+++ b/ansible-playbook/inventories/container/hosts/hosts.yml
@@ -9,6 +9,10 @@ server:
       hosts:
         vaultwarden.nixpi.de:
           ansible_host: 192.168.60.11
+    misc:
+      hosts:
+        misc.nixpi.de:
+          ansible_host: 192.168.60.12
     forgejo:
       hosts:
         forgejo.nixpi.de:
